--- a/components/python-fmidaqks/overlays/development/deployment-patch.yaml
+++ b/components/python-fmidaqks/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-fmidaqks
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: nexus-docker-nexus.apps.cluster-t98q8.t98q8.sandbox2574.opentlc.com/tssc_qe/python-fmidaqks:ee51bdae4ec20adbc67144a8ded2f68b75e818e5@sha256:a66d22a70c5db845afbe0b8ed70e16ec1e8e17a1bd02e7d4ac5d89b872d9c4d3
+          name: container-image
